# f1api-wrapper

./: Dockerfile  README.md  pyproject.toml  skaffold.yaml
app/: dependencies.py  main.py
app/common/: f1api.py  gcp_cloudsql.py  gcp_secrets.py
app/common/exception/: exceptions.py
app/common/logging/: __init__.py  handler.py
app/config/: __init__.py  config.py
app/routes/: auth.py  f1api.py  root.py
app/schema/: auth.py  base.py  f1api.py
deploy/production/: service.yaml
